Update repo links.

--- a/build
+++ b/build
@@ -16,12 +16,12 @@ my $depth;
 my @git;
 my $kernel_version = '';
 
-my $main_git_url = "git://linuxtv.org/media_tree.git";
-my $main_branch = "master";
+#my $main_git_url = "git://linuxtv.org/media_tree.git";
+#my $main_branch = "master";
 #my $firmware_url = "http://www.linuxtv.org/downloads/firmware/";
 
-#my $main_git_url = "https://github.com/crazycat69/linux_media.git";
-#my $main_branch = "latest";
+my $main_git_url = "https://github.com/crazycat69/linux_media.git";
+my $main_branch = "latest";
 my $firmware_url = "https://github.com/crazycat69/media_build/releases/download/latest";
 my $firmware_tarball = "dvb-firmwares.tar.bz2";
 
